--- a/src/System.Net.Security/ref/project.json
+++ b/src/System.Net.Security/ref/project.json
@@ -9,6 +9,7 @@
     "System.Threading.Tasks": "4.4.0-beta-24625-01"
   },
   "frameworks": {
-    "netstandard1.7": {}
+    "netstandard1.7": {},
+    "netcoreapp1.1": {}
   }
 }
