--- a/src/System.Threading.Thread/src/project.json
+++ b/src/System.Threading.Thread/src/project.json
@@ -1,3 +1,4 @@
+
 {
   "frameworks": {
     "netstandard1.7": {
@@ -8,6 +9,11 @@
     "net463": {
       "dependencies": {
         "Microsoft.TargetingPack.NETFramework.v4.6.2": "1.0.1"
+      }
+    },
+    "uap10.1": {
+      "dependencies": {
+        "Microsoft.TargetingPack.Private.NETNative": "1.1.0-beta-24607-01"
       }
     }
   }
