--- a/buildvertical.targets
+++ b/buildvertical.targets
@@ -15,7 +15,14 @@
     <!-- find the best configuration for each project, projects that shouldn't build for this configuration
          return an empty item.  -->
     <MSBuild Targets="FindBestConfiguration"
-             Projects="@(Project)">
+             Projects="@(Project)"
+             Condition="'$(BuildAllConfigurations)' != 'true'">
+      <Output TaskParameter="TargetOutputs"
+              ItemName="_ProjectBestConfigurations" />
+    </MSBuild>
+    <MSBuild Targets="GetBuildConfigurations"
+             Projects="@(Project)"
+             Condition="'$(BuildAllConfigurations)' == 'true'">
       <Output TaskParameter="TargetOutputs"
               ItemName="_ProjectBestConfigurations" />
     </MSBuild>
@@ -51,35 +58,62 @@
       <_BestConfiguration Condition="'$(BuildConfigurations)' == ''">$(BuildConfiguration)</_BestConfiguration>
     </PropertyGroup>
   </Target>
-
-  <!-- Runs in a leaf project (eg: csproj) to determine best configuration if one exists for purposes of project references -->
-  <Target Name="FindBestConfigurationForProjectReference"
-          DependsOnTargets="FindBestConfiguration"
-          Returns="$(_BestConfiguration)">
-    <Error Condition="'$(_BestConfiguration)' == ''" Text="Could not find a configuration for $(BuildConfiguration) from $(BuildConfigurations)" />
+  
+  <!-- Runs in a leaf project (eg: csproj) to determine all configurations -->
+  <Target Name="GetBuildConfigurations"
+          Returns="$(_AllBuildConfigurations)">
+     <PropertyGroup>
+       <_AllBuildConfigurations>$(BuildConfigurations)</_AllBuildConfigurations>
+       <_AllBuildConfigurations Condition="'$(BuildConfigurations)' == ''">$(BuildConfiguration)</_AllBuildConfigurations>
+     </PropertyGroup>
   </Target>
 
   <!-- Runs in a leaf project (csproj) to determine best configuration for ProjectReferences -->
   <Target Name="AnnotateProjectReference"
-          BeforeTargets="BeforeResolveReferences">
+          BeforeTargets="BeforeResolveReferences"
+          Inputs="%(ProjectReference.Identity)"
+          Outputs="unused">
 
-    <!-- find the best configuration for each project, projects that do not have an 
-        applicable configuration will fail the build.  -->
-    <MSBuild Targets="FindBestConfigurationForProjectReference"
+    <!-- Get all configurations for each ProjectReference.  -->
+    <MSBuild Targets="GetBuildConfigurations"
              Projects="@(ProjectReference)">
-      <Output TaskParameter="TargetOutputs" ItemName="_ProjectReferenceBestConfigurations" />
+      <Output TaskParameter="TargetOutputs" PropertyName="_projectReferenceBuildConfigurations" />
     </MSBuild>
+    
+    <PropertyGroup>
+      <_projectReferenceConfiguration>%(ProjectReference.Configuration)</_projectReferenceConfiguration>
+      <_projectReferenceBuildConfigurations>;$(_projectReferenceBuildConfigurations);</_projectReferenceBuildConfigurations>
+    </PropertyGroup>
 
-    <ItemGroup>
-      <!-- transform back to ProjectReference -->
-      <ProjectReferenceWithConfiguration Include="@(_ProjectReferenceBestConfigurations->'%(OriginalItemSpec)')">
-        <AdditionalProperties>Configuration=%(Identity);%(_ProjectReferenceBestConfigurations.AdditionalProperties)</AdditionalProperties>
-      </ProjectReferenceWithConfiguration>
-    </ItemGroup>
+    <Error Condition="'$(_projectReferenceConfiguration)' != '' AND !$(_projectReferenceBuildConfigurations.Contains(';$(_projectReferenceConfiguration);'))"
+           Text="Configuration '$(_projectReferenceConfiguration)' was specified for project reference @(ProjectReference) but that is not in the list of supported BuildConfigurations '$(_projectReferenceBuildConfigurations)'" />
 
+    <!-- Find the best configuration for the current Project's Configuration -->
+    <FindBestConfiguration Condition="'$(_projectReferenceConfiguration)' == ''"
+                           Properties="@(Property)"
+                           PropertyValues="@(PropertyValue)"
+                           BuildConfigurations="$(_ProjectReferenceBuildConfigurations)"
+                           BuildConfiguration="$(Configuration)">
+      <Output TaskParameter="BestConfiguration" PropertyName="_projectReferenceConfiguration" />
+    </FindBestConfiguration>
+    
+    <Message Text="Could not find a configuration for '@(ProjectReference)' when building '$(Configuration)' from configurations '$(_projectReferenceBuildConfigurations)'. Trying BuildConfiguration '$(BuildConfiguration)'." />
+
+    <!-- Find the best configuration for the current BuildConfiguration -->
+    <FindBestConfiguration Condition="'$(_projectReferenceConfiguration)' == ''"
+                           Properties="@(Property)"
+                           PropertyValues="@(PropertyValue)"
+                           BuildConfigurations="$(_ProjectReferenceBuildConfigurations)"
+                           BuildConfiguration="$(BuildConfiguration)">
+      <Output TaskParameter="BestConfiguration" PropertyName="_projectReferenceConfiguration" />
+    </FindBestConfiguration>
+
+    <Error Condition="'$(_projectReferenceConfiguration)' == ''" Text="Could not find a configuration for '@(ProjectReference)' when building '$(Configuration)' from configurations '$(_projectReferenceBuildConfigurations)'." />
+  
     <ItemGroup>
-      <ProjectReference Remove="@(ProjectReference)" />
-      <ProjectReference Include="@(ProjectReferenceWithConfiguration)" />
+      <ProjectReference>
+        <AdditionalProperties>Configuration=$(_projectReferenceConfiguration);%(ProjectReference.AdditionalProperties)</AdditionalProperties>
+      </ProjectReference>
     </ItemGroup>
   </Target>
 </Project>
