--- a/dir.props
+++ b/dir.props
@@ -248,7 +248,7 @@
 
     <RuntimePath Condition="'$(RuntimePath)' == ''">$(BinDir)runtime/$(BuildConfiguration)/</RuntimePath>
     <RefRootPath>$(BinDir)ref/</RefRootPath>
-    <RefPath>$(RefRootPath)$(_bc_TargetGroup)/</RefPath>
+    <RefPath>$(RefRootPath)$(TargetGroup)/</RefPath>
     <NetStandardRefPath>$(RefRootPath)netstandard/</NetStandardRefPath>
     <NetFxRefPath>$(RefRootPath)netfx/</NetFxRefPath>
 
